# par_scrape

./: .gitignore  .gitignore~  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  PR_15_REVIEW.md  PR_15_REVIEW_UPDATED.md  README.md  TESTING.md  pyproject.toml  pyrightconfig.json  ruff.toml
.github/actions/validate-version/: action.yml
.github/workflows/: build.yml  publish-dev.yml  publish.yml  release-pipeline.yml  release.yml
docs/: architecture.md
docs/plans/: 2026-02-25-fix-code-review-issues.md
src/par_scrape/: __init__.py  __main__.py  api.py  crawl.py  enums.py  exceptions.py  extraction_prompt.md  fetch_html.py  links.py  paths.py  pricing.py  pricing_lookup.py  prune.py  queue_cli.py  queue_db.py  robots.py  runner.py  scrape.py  scrape_data.py  utils.py
src/par_scrape/lib/: llm_config.py  llm_image_utils.py  llm_providers.py  llm_utils.py  output_utils.py  par_ollama_embeddings.py  pricing_lookup.py  provider_cb_info.py  search_utils.py  user_agents.py  utils.py  web_tools.py
tests/: conftest.py  test_api.py  test_crawl.py  test_enums.py  test_exceptions.py  test_prune.py  test_queue_cli.py  test_runner.py  test_scrape_data.py  test_utils.py
