[project]
name = "par_scrape"
dynamic = [
    "version",
]
description = "A versatile web scraping tool with options for Selenium or Playwright, featuring OpenAI-powered data extraction and formatting."
url = "https://github.com/paulrobello/par_scrape"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Paul Robello", email = "probello@gmail.com" },
]
maintainers = [
    { name = "Paul Robello", email = "probello@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Other Audience",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: POSIX :: Linux",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: HTML",
    "Typing :: Typed",
]
keywords = [
    "web scraping",
    "data extraction",
    "selenium",
    "playwright",
    "openai",
    "anthropic",
    "xai",
    "openrouter",
    "groq",
    "ollama",
    "llamacpp",
]
dependencies = [
    "beautifulsoup4>=4.14.2",
    "pandas>=2.3.3",
    "pydantic>=2.10.6",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "typer>=0.20.0",
    "openpyxl>=3.1.5",
    "tabulate>=0.9.0",
    "par-ai-core>=0.4.3",
    "fastapi>=0.121.2",
    "tldextract>=5.3.0",
    "strenum>=0.4.15",
]
packages = [
    "src/par_scrape",
]

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/paulrobello/par_scrape"
Documentation = "https://github.com/paulrobello/par_scrape/blob/main/README.md"
Repository = "https://github.com/paulrobello/par_scrape"
Issues = "https://github.com/paulrobello/par_scrape/issues"
Discussions = "https://github.com/paulrobello/par_scrape/discussions"
Wiki = "https://github.com/paulrobello/par_scrape/wiki"

[project.scripts]
par_scrape = "par_scrape.__main__:app"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "build>=1.3.0",
    "pyright>=1.1.407",
    "ruff>=0.14.5",
    "pre-commit>=4.4.0",
    "pytest>=9.0.1",
    "pytest-mock>=3.15.1",
    "pytest-cov>=7.0.0",
]

[tool.hatch.version]
path = "src/par_scrape/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [
    "src/par_scrape",
]
include = [
    "py.typed",
    "**/*.py",
    "**/*.html",
    "**/*.gif",
    "**/*.jpg",
    "**/*.png",
    "**/*.md",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/par_scrape",
    "LICENSE",
    "README.md",
    "extraction_prompt.md",
    "pyproject.toml",
]
exclude = [
    "*.pyc",
    "__pycache__",
    "*.so",
    "*.dylib",
]

[tool.pyright]
pythonVersion = "3.14"
pythonPlatform = "All"
typeCheckingMode = "standard"
useLibraryCodeForTypes = true
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = "warning"
reportUnusedClass = "warning"
reportUnusedFunction = "warning"
reportUnusedVariable = "warning"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
]
addopts = "-v --cov=par_scrape --cov-report=term-missing"
pythonpath = [
    "src",
]
